welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:6: error: unclosed comment
/*while (!fini) {
^BDRBuggle:2: error: Missing closing brace `}' assumed here
var fini:boolean=false;
^BDRBuggle:4: error: expected class or object definition
litMessage()
^