welcome.lessons.welcome.bdr.BDR.scala.code
var fini:boolean=false;

litMessage()

/*while (!fini) {
	






	
}
